Article ready for correction

--- a/android-connecting-data1.html
+++ b/android-connecting-data1.html
@@ -103,10 +103,12 @@
                     <hr>
 
 					<div alert class="alert alert-lok">Enter the value using connected Mitutoyo measuring instrument. Use USB HID data cable for it + press button Data.
+					<br />
+					Clear the page pressing F5.
 					</div>
 					<input type="text" id="txtMeasurement"/>
 
-					<table id="tableOfMeasurements" class="img-polaroid" width="220px">
+					<table id="tableOfMeasurements" class="tableOfMeasurements" width="220px">
 					  <tr>
 						<th>Nr.</th>
 						<th>Value</th> 
@@ -161,7 +163,9 @@
         </div>
     </div>
 </div>
-<br /><br /><br />
+<br />
+<br />
+<br />
 
 <script src="scripts/jquery.min.js" type="text/javascript"></script> 
 <script src="scripts/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
