Corrections in Englisch (in title).

--- a/android-connecting.html
+++ b/android-connecting.html
@@ -85,7 +85,7 @@
             <!--Edit Main Content Area here-->
                 <div class="span12" id="divMain">
 
-                    <h1>Connecting Mitutoyo small instruments with an Android devices</h1>
+                    <h1>Connecting Mitutoyo small instruments with Android devices</h1>
                     <hr>
 					<img src="images/android-connecting.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
                     <p>Many of Mitutoyo small instruments are able to send results to computer or other electronic device. The ability to connect Mitutoyo small devices with Android will bring you two tremendous advantages:
