--- a/android-connecting.html
+++ b/android-connecting.html
@@ -88,7 +88,7 @@
                     <h1>Connecting Mitutoyo small instruments with Android devices</h1>
                     <hr>
 					<img src="images/android-connecting.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
-                    <p>Many of Mitutoyo small instruments are able to send results to computer or other electronic device. The ability to connect Mitutoyo small devices with Android will bring you two tremendous advantages:
+                    <p>Many of Mitutoyo small instruments are able to send results to computer or other electronic device. The ability to connect Mitutoyo small devices with Android will bring you three tremendous advantages:
 					<ul>
 					<li>it allows you to keep track of measurement</li>
 					<li>visual presentation on the dashboard</li>
