--- a/android-connecting-data1.html
+++ b/android-connecting-data1.html
@@ -155,7 +155,8 @@
 						cell2.innerHTML = document.getElementById("txtMeasurement").value;
 						
 						// add new data into data array for chart
-						data.push([rovNumber, Number(document.getElementById("txtMeasurement").value), 0]);
+						enteredValue =   (document.getElementById("txtMeasurement").value).replace(',', '.');
+						data.push([rovNumber, Number(enteredValue), 0]);
 						if (data.length > 20) {
 							data.shift();
 						}
