--- a/skel-meas2.html
+++ b/skel-meas2.html
@@ -22,6 +22,10 @@
   <link rel="stylesheet" href="skel_css/normalize.css">
   <link rel="stylesheet" href="skel_css/skeleton.css">
 
+  <style>
+	.channelValue { font-size:55px; color:#aaaaaa; text-align: right; margin: 0px 100px 0px 55px; float:left;}
+  </style>
+  
   <!-- Favicon
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <link rel="icon" type="image/png" href="favicon.ico">
@@ -42,7 +46,7 @@
 		<h3>Measuring data collection and presentation</h3>
 
 		<input type="text" id="txtMeasurement"/>
-		<div>Count of channels:&nbsp;
+		<div style="float:right">Count of channels:&nbsp;
 			<select id="countOfChannels" onchange="ChannelCountChanged()" style="width: 90px">
 			  <option value=1>1</option>
 			  <option value=2>2</option>
@@ -50,7 +54,13 @@
 			</select>
 		</div>
 		
-		<div id="graphdiv1" style="width:100%; height:400px;"></div>
+		<div>
+			<div id="channelValue1" class="channelValue">&nbsp;</div>
+			<div id="channelValue2" class="channelValue">&nbsp;</div>
+			<div id="channelValue3" class="channelValue">&nbsp;</div>
+		</div>
+		
+		<div id="graphdiv1" style="width:100%; height:400px; clear:left;"></div>
 		<p>&nbsp;</p>
 		
 		<div id="graphdiv2" style="width:100%; height:400px;"></div>
@@ -72,8 +82,9 @@
 	
 	var countOfChannels = 1;
 	var actualChannelNr = 1;
-	var channel1 = 0;
-	var channel2 = 0;
+	var channel1 = "";
+	var channel2 = "";
+	var channel3 = "";
 	var graphCountOfValues = 50;
 	var enteredValue;
 	
@@ -149,15 +160,16 @@
 				// ....................................................................................
 				case 1:
 					// add new data into data array for chart
+					channel1 = Number(enteredValue);
 					if (rovNumber <= graphCountOfValues){
 						// first N values into empty graph
-						data1[rovNumber] = [rovNumber, Number(enteredValue)]; 
+						data1[rovNumber] = [rovNumber, channel1]; 
 						data2[rovNumber] = [rovNumber, null];
 						data3[rovNumber] = [rovNumber, null];  									
 					} 
 					else {
 						// shifting graph lines
-						data1.push([rovNumber, Number(enteredValue)]);
+						data1.push([rovNumber, channel1]);
 						data1.shift();
 						data2.push([rovNumber, null]);
 						data2.shift();
@@ -176,17 +188,18 @@
 					}
 					else{
 						// entered value for channel 2
+						channel2 = Number(enteredValue);
 						if (rovNumber <= graphCountOfValues){
 							// first N values into empty graph
 							data1[rovNumber] = [rovNumber, channel1]; 
-							data2[rovNumber] = [rovNumber, Number(enteredValue)];
+							data2[rovNumber] = [rovNumber, channel2];
 							data3[rovNumber] = [rovNumber, null];    
 						} 
 						else {
 							// shifting graph lines
 							data1.push([rovNumber, channel1]);
 							data1.shift();
-							data2.push([rovNumber, Number(enteredValue)]);
+							data2.push([rovNumber, channel2]);
 							data2.shift();
 							data3.push([rovNumber, null]);
 							data3.shift();
@@ -211,11 +224,12 @@
 						}
 						else{
 							// entered value for channel 3
+							channel3 = Number(enteredValue);
 							if (rovNumber <= graphCountOfValues){
 								// first N values into empty graph
 								data1[rovNumber] = [rovNumber, channel1]; 
 								data2[rovNumber] = [rovNumber, channel2];
-								data3[rovNumber] = [rovNumber, Number(enteredValue)];   
+								data3[rovNumber] = [rovNumber, channel3];   
 							} 
 							else {
 								// shifting graph lines
@@ -223,7 +237,7 @@
 								data1.shift();
 								data2.push([rovNumber, channel2]);
 								data2.shift();
-								data3.push([rovNumber, Number(enteredValue)]);
+								data3.push([rovNumber, channel3]);
 								data3.shift();
 							}
 							actualChannelNr = 1;
@@ -238,7 +252,9 @@
 			g2.updateOptions( { 'file': data2 } );
 			g3.updateOptions( { 'file': data3 } );
 			this.value = "";
-			
+			document.getElementById("channelValue1").innerHTML = channel1;
+			document.getElementById("channelValue2").innerHTML = channel2;
+			document.getElementById("channelValue3").innerHTML = channel3;
 		}
 	}
 	
