Change (and add) pictures for USB ITN connecting.

--- a/android-connecting.html
+++ b/android-connecting.html
@@ -98,16 +98,18 @@
 					</p>	
 					
                     <h3>Connection using USB-ITN cable</h3>
-					<p>Connection using Mitutoyo USB-ITN cable (Input Tool Direct) is easiest way how to connect small tools as calipers, micrometers or dial indicators. The only think is need to connect the device - USB OTG cable. This cable serve simultaneously as converter from USB A connector to micro USB. Some <a href="https://i.czc.cz/2k8t50sp40g8a81oe0quo0ua52_1/obrazek">types of USB OTG cables</a> can also include charging outlet.
+					<p>Connection using <strong>Mitutoyo USB-ITN cable</strong> (Input Tool Direct) is easiest way how to connect small tools as calipers, micrometers or dial indicators. The only think is need to connect the device is commonly used <strong>USB OTG cable</strong>. This cable serve simultaneously as converter from USB A connector to micro USB. Some <a href="https://i.czc.cz/2k8t50sp40g8a81oe0quo0ua52_1/obrazek">types of USB OTG cables</a> can also include charging outlet.
 					</p>
 					<p>Appropriate Android application for visualization of data should be <strong><a href="https://play.google.com/store/apps/details?id=com.rhmsoft.edit&hl=en">Quick Edit</a></strong>. This simple text editor allows you to set the text size, line numbering, etc.
 					</p>
 					<p style="text-align:center">
-						<img src="images/QuickEditCaliper.jpg" class="img-polaroid" alt="">
-						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
-						<img src="images/QuickEdit1.png" class="img-polaroid" alt="">
+						<img src="images/Android1b2.JPG" class="img-polaroid" alt="">
+						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+						<img src="images/Android2b2.JPG" class="img-polaroid" alt="">
+						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
+						<img src="images/QuickEdit2.jpg" class="img-polaroid" alt="">
 						<br />
-						<small><i>On this picture you can see calipers connected to Android phone. Beside is example of output record from this calipers.</small></i>
+						<small><i>On this picture you can see micrometer connected to Android phone. More instruments is possible to connect using cheap small USB OTG hub.<br />On the right example of output record from this calipers.</small></i>
 					</p>
 					<p>The connection is very easy, cheap and effective. The set of devices which you can see on the picture can be used among other as a small data logger.
 					</p>
