Added index for apps, added QuickImage video page.
Plus some minor changes.

--- a/android-connecting.html
+++ b/android-connecting.html
@@ -109,7 +109,7 @@
 						&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;
 						<img src="images/QuickEdit2.jpg" class="img-polaroid" alt="">
 						<br />
-						<small><i>On this picture you can see micrometer connected to Android phone. More instruments is possible to connect using cheap small USB OTG hub.<br />On the right example of output record from this calipers.</small></i>
+						<small><i>On this picture you can see micrometer connected to Android phone. More instruments is possible to connect using cheap small USB OTG hub.<br />On the right example of output record from three instruments in QuickEdit editor.</small></i>
 					</p>
 					<p>The connection is very easy, cheap and effective. The set of devices which you can see on the picture can be used among other as a small data logger.
 					</p>
