Added LSM with Fanuc video page

--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 					<ul>
 						<li><a href="QuickImageVideo1.html">Video QuickImage prototypová instalace pro automatickou kontrolu. Ukázka schopnosti plně automatizovaného běhu a možností napojení na další zařízení.</a>
 						<br /><i>Video: QuickImage prototype for automatic product sorting. Shows the possibility for full automatic run and for independent hardware control.</i></li>
+						<li><a href="LsmFanucVideo.html">Laser Scan Micrometer with the FANUC robot. Ukázka možnosti spolupráce robota s měřícím zařízením.</a>
+						<br /><i>Video: Laser Scan Micrometer with the FANUC robot. Automation example.</i></li>
 					</ul>
 					
 					<h3>Lineární odměřovací pravítka (linear scales)</h3>
