Added text + link to the video SignalIndicator.mp4

--- a/index.html
+++ b/index.html
@@ -109,6 +109,8 @@
 						<br /><i>Video: Laser Scan Micrometer with the FANUC robot. Automation example.</i></li>
 						<li><a href="LsmFanucVideoMSV2018.html">Laser Scan Micrometer and SJ-410 with the FANUC robot. Ukázka možnosti spolupráce robota s měřícím zařízením (MSV Brno 2018).</a>
 						<br /><i>Video: Laser Scan Micrometer plus SJ-410 with the FANUC robot. Automation example.</i></li>
+						<li><a href="./videos/SignalIndicator.mp4">Simple automation in saw sharpening using of signal indicator 543-350B and PLC.</a>
+						<br /><i>Video: jednoduchá automatizace s použitím úchylkoměru 543-350B s digitálními výstupy s připojením na PLC.</i></li>
 					</ul>
 					
 					<h3>Lineární odměřovací pravítka (linear scales)</h3>
