--- a/SignalOutputIndicatorSaw - kopie.html
+++ b/SignalOutputIndicatorSaw - kopie.html
@@ -115,6 +115,17 @@
 					</p>  
 					<p>K řízení celého procesu je použito <a href="https://www.seapraha.cz/produkt/fac-b1z-10mr2-d24s/" title="PLC">jednoduché a levné PLC</a> od SEA Praha.
 					</p>  
+					
+					<p>&nbsp</p>
+					<p style="text-align:center">
+						<img src="images/PlcPullUp.jpg" style="margin:5px 0px 15px;" alt="">
+					</p>
+					<p>Note: for PLC connection may be important to use pull-up resistors because the open collector is used on the indicator output. These resistors define correct H-level on PLC inputs.
+					</p>
+					<hr />
+					<p>Upozornění: pro připojení PLC může být nutné použití pull-up odporů, neboť na straně měřidla jsou použity výstupy s otevřeným kolektorem. Pomocí těchto odporů je zajištěna správná úroveň H na vstupech PLC.
+					</p>
+					
 					<p><u>Poznámka:</u><br />
 					Způsob upevnění úchylkoměru není v tomto případě zcela ideální. Stavěcí šroub směřující přímo do pouzdra vřetene může pouzdro promáčknout a tím dojde k omezení pohyblivosti měřícího vřetene. Správný způsob uchycení je svěrnou dělenou objímkou. 
 					</p>
