--- a/index.html
+++ b/index.html
@@ -111,6 +111,10 @@
 						<br /><i>Video: Laser Scan Micrometer plus SJ-410 with the FANUC robot. Automation example.</i></li>
 						<li><a href="SignalOutputIndicatorSaw.html">Simple automation in saw sharpening using of signal indicator 543-350B and PLC.</a>
 						<br /><i>Video: jednoduchá automatizace s použitím úchylkoměru 543-350B s digitálními výstupy s připojením na PLC.</i></li>
+					</ul>
+					
+					<h3>Příklady realizací (application examples)</h3>
+					<ul>
 						<li><a href="TirJMeasurementEvCounter.html">TIR measurement using linear gauges and MH couner</a>
 						<br /><i>Měření házení s použitím lineárních snímačů a MH čitačů.</i></li>
 					</ul>
