Error correction in file name (TirMeasurementEhCounter.html) and headline. It is EH counter.

--- a/TirMeasurementEhCounter.html
+++ b/TirMeasurementEhCounter.html
@@ -96,7 +96,7 @@
             <!--Edit Main Content Area here-->
                 <div class="span12" id="divMain">
 
-					<h1>TIR measurement using linear gauges and MH couner</h1>
+					<h1>TIR measurement using linear gauges and EH couner</h1>
 					
 					<img src="images/TirEh1.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
 					<p>Workplace for runout measurement. Runout is measured on the tube-form workpiece on three positions. Originally the measurement was realized using three standard indicators with manual reading and evaluation min-max by each tube turn. Tube turns are realized manually by the hand. Measurement consumed a lot of time and was affected a lot of errors due to human factor.
