--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
 					
 					<h3>Příklady realizací (application examples)</h3>
 					<ul>
-						<li><a href="TirMeasurementEvCounter.html">TIR measurement using linear gauges and MH couner</a>
+						<li><a href="TirMeasurementEhCounter.html">TIR measurement using linear gauges and MH couner</a>
 						<br /><i>Měření házení s použitím lineárních snímačů a MH čitačů.</i></li>
 					</ul>
 					
