MH counter -> EH counter (again)

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 					
 					<h3>Příklady realizací (application examples)</h3>
 					<ul>
-						<li><a href="TirMeasurementEhCounter.html">TIR measurement using linear gauges and MH couner</a>
-						<br /><i>Měření házení s použitím lineárních snímačů a MH čitačů.</i></li>
+						<li><a href="TirMeasurementEhCounter.html">TIR measurement using linear gauges and EH couner</a>
+						<br /><i>Měření házení s použitím lineárních snímačů a EH čitačů.</i></li>
 					</ul>
 					
 					<h3>Lineární odměřovací pravítka (linear scales)</h3>
