--- a/TirMeasurementEhCounter.html
+++ b/TirMeasurementEhCounter.html
@@ -89,7 +89,7 @@
         <div class="divPanel notop page-content">
 
             <div class="breadcrumbs">
-                <a href="index.html">Home</a> &nbsp;/&nbsp; <span>TIR measurement using linear gauges and MH couner</span>
+                <a href="index.html">Home</a> &nbsp;/&nbsp; <span>TIR measurement using linear gauges and MH counter</span>
             </div>
 
             <div class="row-fluid">
@@ -99,9 +99,9 @@
 					<h1>TIR measurement using linear gauges and EH couner</h1>
 					
 					<img src="images/TirEh1.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
-					<p>Workplace for runout measurement. Runout is measured on the tube-form workpiece on three positions. Originally the measurement was realized using three standard indicators with manual reading and evaluation min-max by each tube turn. Tube turns are realized manually by the hand. Measurement consumed a lot of time and was affected a lot of errors due to human factor.
+					<p>Workplace for runout measurement. Runout is measured on the tube-form workpiece in three positions. Originally, the measurement was made using three standard indicators with manual reading and min-max evaluation at each tube turn. The tube is turned are realized manually by hand. Measurements were slow and its accuracy was affected by human factor resulting in lots of errors.
 					<br />
-					In new configuration are used LGF linear gauges instead of indicators. Te are connected each to own EH counter. Each counter can realize function MIN, MAX and TIR. Common resetting all of the counters are realized by pressing of a footswitch.
+					In the new configuration, there are LGF linear gauges used instead of indicators. Tehy are each connected each to their own EH counter. Each counter can assess MIN, MAX and TIR function. Common resetting of all counters is done by pressing of the footswitch.
 					</p>
 					<hr />
 					<p>Stanoviště na měření házení. Házení je měřeno na výrobku ve tvaru trubky na třech stanovených místech. Původně bylo měření prováděno pomocí tří úchylkoměrů s manuálním odčítáním min a max hodnoty při každé otáčce trubky. Trubkou obsluha při měření otáčí volně rukou. Měření bylo pomalé a výsledná přesnost byla značně ovlivněna pečlivostí obsluhy.
@@ -111,7 +111,7 @@
 					<p>&nbsp</p>
 					<img src="images/TirEh2.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
 					<br />
-					<p>Basic functional set-up after component unpacking. Pay attention to common power supply for all units using once power adapter. It is important for future join of sone inputs or outputs (common ground).
+					<p>Basic functional set-up after component unpacking. Pay attention to common power supply for all units using one power adapter. It is important for further connection of more inputs or outputs (common ground).
 					</p>
 					<hr />
 					<p>Základní funkční zapojení sestavy po vybalení komponent. Za zmínku stojí realizace společného napájení čítačů z jediného zdroje. To je důležité pro budoucí společné propojení některých vstupů a výstupů (společná země).
@@ -119,7 +119,7 @@
 					<p>&nbsp</p>
 					<img src="images/TirEh3.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
 					</p>
-					<p>Wiring from the back includes data communication cables. In the second realization phase is request for <b>data transfer to the computer</b>. There will be realized the tolerance evaluation and final decision OK / NOK. With blue and violet point are denoted RS-LINK cables, they allow bus connection of counters 3 -> 2, 2 -> 1 ana finally 1 -> PC using RS232.
+					<p>Wiring from the back includes data communication cables. The request is <b>data transfer to the computer</b>. There will be tolerance evaluated and final decision of OK / NOK made. The cables fo RS-LINK connection are marked blue and purple. This allows the bus connection of counters 3 -> 2, 2 -> 1 and finally 1 -> PC using RS232.
 					</p>
 					<hr />
 					<p>Propojení zezadu včetně kabelů pro přenos dat - ve druhé fázi realizace je požadavkem <b>přenos dat do počítače</b>, kde bude prováděno finální vyhodnocení tolerancí a výsledné stanovení OK / NOK. Modře a fialově jsou označené kabely propojení RS-LINK, které umožňují řetězené propojení jednotek 3 -> 2, 2 -> 1 a finálně 1 -> PC pomocí RS232.
@@ -128,7 +128,7 @@
 					<p style="text-align:center">
 						<img src="images/TirEh4.jpg" style="margin:5px 0px 15px;" alt="">
 					</p>
-					<p>Detail of gauge fastening. Green parts server for protection of gauges only. They avoid tube insertion in the direction from top to down perpendicular to gauge spindles.
+					<p>Detail of gauge fastening. Green parts serve for good protection of gauges only. They prevent tube insertion in the direction from top to bottom perpendicular to gauge spindles. There could be perpendicular contact of the part with the spindle causing its damage if move carelessly. It's necessary to insert the part at an angle in direction of gauge spindles.
 					</p>
 					<hr />
 					<p>Detail upevnění snímačů. Zelené díly slouží k ochraně snímačů, resp. zabraňují vložení trubky do přípravku shora kolmo ke vřetenům snímačů, kdy by při neopatrném pohybu mohlo dojít ke kolmému střetu dílu s vřetenem a jeho ohnutím. Díky ochranám je nutné díl vkládat šikmo zepředu ve směru os vřeten snímačů.
@@ -137,7 +137,7 @@
 					<p style="text-align:center">
 						<img src="images/TirEh5.jpg" style="margin:5px 0px 15px;" alt="">
 					</p>
-					<p>Counters are reset by wire in the realization phase No. 1. The footswitch on AX input on the I/O connector is used for it. But software control using RS232 command will be used for resetting in realization phase No. 2. From the I/O connector would be possible to use other signals too, for example for external lights for tolerance evaluation.
+					<p>Counters are reset by cable in the phase No. 1. The footswitch on AX input on the I/O connector is used for this. But the software control using RS232 command will be used for resetting in phase No. 2. It would be possible to use the other signals from the I/O connector too, for example for external optical signalization of tolerance evaluation.
 					</p>
 					<hr />
 					<p>V realizační fázi 1 je nulování čítačů prováděno hardwarově pomocí pedálu a AX vstupu na konektoru I/O rozhraní. Ve finální fázi bude realizováno softwarově pomocí RS232 příkazu z řídícího počítače. Z výstupního konektoru by bylo možné vyvést i výstupní signály pro externí optickou signalizaci tolerančního vyhodnocení.
