Text error correction.

--- a/TirMeasurementEhCounter.html
+++ b/TirMeasurementEhCounter.html
@@ -96,12 +96,12 @@
             <!--Edit Main Content Area here-->
                 <div class="span12" id="divMain">
 
-					<h1>TIR measurement using linear gauges and EH couner</h1>
+					<h1>TIR measurement using linear gauges and EH counter</h1>
 					
 					<img src="images/TirEh1.jpg" class="img-polaroid" style="margin:5px 0px 15px;" alt="">
 					<p>Workplace for runout measurement. Runout is measured on the tube-form workpiece in three positions. Originally, the measurement was made using three standard indicators with manual reading and min-max evaluation at each tube turn. The tube is turned are realized manually by hand. Measurements were slow and its accuracy was affected by human factor resulting in lots of errors.
 					<br />
-					In the new configuration, there are LGF linear gauges used instead of indicators. Tehy are each connected each to their own EH counter. Each counter can assess MIN, MAX and TIR function. Common resetting of all counters is done by pressing of the footswitch.
+					In the new configuration, there are LGF linear gauges used instead of indicators. They are connected each to their own EH counter. Each counter can assess MIN, MAX and TIR function. Common resetting of all counters is done by pressing of the footswitch.
 					</p>
 					<hr />
 					<p>Stanoviště na měření házení. Házení je měřeno na výrobku ve tvaru trubky na třech stanovených místech. Původně bylo měření prováděno pomocí tří úchylkoměrů s manuálním odčítáním min a max hodnoty při každé otáčce trubky. Trubkou obsluha při měření otáčí volně rukou. Měření bylo pomalé a výsledná přesnost byla značně ovlivněna pečlivostí obsluhy.
