Přidání stránky LH600DataOutput.html

--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@
 						<br /><i>JavaScript example for recording and graphic data presentation (in common diagram).</i></li>
 						<li><a href="skel-meas1.html">Příklad JavaScript řešení pro záznam a grafickou prezentaci dat v oddělených grafech (až 3 kanály).</a>
 						<br /><i>JavaScript example for recording and graphic data presentation (in separate diagrams).</i></li>
+						<li><a href="LH600DataOutput.html">Výstup dat z výškoměru LH-600 pomocí kabelu.</a>
+						<br /><i>Data output from LH-600 using cable.</i></li>
 					</ul>
 					
 					<h3>Automatizace (automation)</h3>
