Finally corrections in the article Video Microscope Units + add to index.html

--- a/index.html
+++ b/index.html
@@ -101,6 +101,8 @@
 						<br /><i>JavaScript example for recording and graphic data presentation (in separate diagrams).</i></li>
 						<li><a href="LH600DataOutput.html">Výstup dat z výškoměru LH-600 pomocí kabelu.</a>
 						<br /><i>Data output from LH-600 using cable.</i></li>
+						<li><a href="MicroscopeUnits.html">Úvod do video mikroskopových jednotek</a>
+						<br /><i>Introduction to Video Microscope Units</i></li>
 					</ul>
 					
 					<h3>Automatizace (automation)</h3>
