Text update, small corections (ATEsystem)

--- a/MicroscopeUnits.html
+++ b/MicroscopeUnits.html
@@ -131,7 +131,7 @@
 					</p>
 
 					<h2>Kamera nebo okulár</h2>
-					<p>V současné době se na technických mikroskopech používá na výstupu mikroskopu obvykle kamera. Její obraz se pak buď přímo zpracovává počítačem anebo je přenášen na monitor. Mitutoyo nedodává kamery pro tyto mikroskopy, ale dodavatelů je dost, například s námi spolupracující ATE Systems. Kamera musí být sladěna s finálními požadavky na aplikaci. Nemá třeba smysl dávat 10 MPx kameru na aplikaci, kde je k prohlížení použit standardní monitor s rozlišením cca 2 MPx.
+					<p>V současné době se na technických mikroskopech používá na výstupu mikroskopu obvykle kamera. Její obraz se pak buď přímo zpracovává počítačem anebo je přenášen na monitor. Mitutoyo nedodává kamery pro tyto mikroskopy, ale dodavatelů je dost, například s námi spolupracující <a href="https://www.atesystem.cz/">ATEsystem</a>. Kamera musí být sladěna s finálními požadavky na aplikaci. Nemá třeba smysl dávat 10 MPx kameru na aplikaci, kde je k prohlížení použit standardní monitor s rozlišením cca 2 MPx.
 					</p>
 					<p>Aplikací, kde se předpokládá pozorování objektu okem, je v průmyslové oblasti relativně málo. Zmínit lze například použití v ustavovacích aplikacích, kde se ustavování neděje příliš často a kamera s příslušenstvím pak činí systém zbytečně dražší a složitější. V těchto případech by byl místo kamery použit okulár. 
 					</p>
@@ -284,7 +284,7 @@
 					</p>
 					
 					<h2>Odkazy</h2>
-					<p>V oblasti speciálních optických zařízení dlouhodobě spolupracujeme s firmou <a href="https://www.atesystem.cz/">ATESystem s.r.o.</a>, která mj. zapůjčila některé prvky pro uvedenou prezentační sestavu.
+					<p>V oblasti speciálních optických zařízení dlouhodobě spolupracujeme s firmou <a href="https://www.atesystem.cz/">ATEsystem s.r.o.</a>, která mj. zapůjčila některé prvky pro uvedenou prezentační sestavu.
 					</p>
 					<p>PDF: <a href="https://www.mitutoyo.co.jp/eng/support/service/catalog/04/E14020.pdf">MICROSOPE UNITS AND OBJECTIVES (MITUTOYO)</a>
 					</p>	
