Update paragraph Light

--- a/MicroscopeUnits.html
+++ b/MicroscopeUnits.html
@@ -139,7 +139,14 @@
 					<h2>Osvětlení</h2>
 					<p>Osvětlení pozorovaného objektu patří k nezbytnému příslušenství, protože osvětlení okolním přirozeným světlem je téměř vždy nedostatečné. Prakticky každé mikroskopové tělo Mitutoyo je vybaveno vstupem (otvorem) pro zdroj osvětlení (prům. cca 7 mm). Toto osvětlení má formu koaxiálního osvětlení přes objektiv, které je používané i v oblasti klasických optických měřících mikroskopů a strojů. Výhodou tohoto řešení je maximální kompaktnost celé sestavu. Pro zvětšení objektivů v rozsahu 1-5x je možné použít externí prstencové osvětlení, které někdy lépe osvětluje scénu bočním všesměrovým světlem. Pro větší zvětšení už ale prstencové osvětlení není s to dodat dostatečný světelný výkon na velmi malou plochu vzorku, jejíž zobrazení mikroskop zpracovává. Pro dokreslení – u použité sestavy mělo obrazové polo průměr jen 0,2 mm a na tuto plochu byl soustředěn světelný výkon zhruba 1W. Jedná se tedy o výkonový tok řádově 500 W/cm²!
 					</p>
-					
+					<p>
+					Ačkoliv se to na první pohled nezdá jako zásadně důležité, je třeba i u osvětlení respektovat geometrické souvislosti v souladu s optickými zákony. Mikroskopová jednotka je konstruována pro osvětlení dodávané firmou Mitutoyo. Při použití jiného optického zdroje (jako v tomto případě) je nutné zajistit to, aby poloha v průměr pupily (výstupu) světelného zdroje byl v odpovídající hloubce portu pro osvětlení. Při nerespektování se může více či méně projevovat jedna ze dvou okrajových situací:
+					</p>
+					<ul>
+						<li>Světlo je „příliš úzké“.  Obrazové pole pak nebude osvětlené zcela rovnoměrně, osvětlení na krajích bude slabší. Toto je částečně patrné i na zde publikovaných snímcích.</li>
+						<li>Světlo je „příliš široké“ a energie světla nebude plně využita. V tomto případě část světla dopadá mimo obrazovou cestu anebo světlo ozařuje podstatně větší plochu vzorku než je ta, která je zpětně zobrazována v okuláru.</li>
+					</ul>
+						
 					<h2>Praktická realizace</h2>
 					<p style="text-align:center">
 						<img src="images/Mic_VMU.jpg" style="margin:5px 0px 15px;" alt="">
