Added text + picture about light adapter

--- a/MicroscopeUnits.html
+++ b/MicroscopeUnits.html
@@ -146,7 +146,14 @@
 						<li>Světlo je „příliš úzké“.  Obrazové pole pak nebude osvětlené zcela rovnoměrně, osvětlení na krajích bude slabší. Toto je částečně patrné i na zde publikovaných snímcích.</li>
 						<li>Světlo je „příliš široké“ a energie světla nebude plně využita. V tomto případě část světla dopadá mimo obrazovou cestu anebo světlo ozařuje podstatně větší plochu vzorku než je ta, která je zpětně zobrazována v okuláru.</li>
 					</ul>
-						
+					<p>DOPLNĚNO: sami jsme museli uvedenou situaci řešit při praktické realizaci. Port pro osvětlení je na mikroskopovém těle navrženo pro Mitutoyo osvětlovací jednotku s přenosem světla pomocí vláknového světlovodu. Protože my jsme pro osvětlení použili LED zdroj firmy CCS Inc., nebyl výstup zdroje umístěn dostatečně hluboko, což se ve výsledku projevilo ne zcela rovnoměrným osvitem zobrazované plochy. To je postřehnutelné i na některých zde zobrazených snímcích. Pro vyloučení tohoto jevu jsme dodatečně nechali vyrobit upravený (kratší) konec světelného portu, kterým jsme nahradili originální zakončení.
+					</p>
+					<p style="text-align:center">
+						<img src="images/Mic_adapter.jpg" style="margin:5px 0px 15px;" alt="">
+					</p>
+					<p style="text-align:center"><i> Vlevo původní originální díl - vpravo nově vyrobený díl.</i>
+					</p>
+					
 					<h2>Praktická realizace</h2>
 					<p style="text-align:center">
 						<img src="images/Mic_VMU.jpg" style="margin:5px 0px 15px;" alt="">
@@ -218,7 +225,7 @@
 					</p>
 					<p>Nyní snímek z oboru mechaniky. Detail hrotu speciální inzulínové injekční jehly.
 					</ br>
-					Pro porovnání je vlevo nahoře detail hrotu drsnoměru se zaoblením špičky hrotu 2 µm.  
+					Pro porovnání je vlevo nahoře detail hrotu drsnoměru se zaoblením špičky hrotu R = 2 µm.  
 					</p>	
 
 					<p style="text-align:center">
