Added page EgEhCounterApp (Aplikace s lineárními snímači a EG (EH) countery)

--- a/SignalOutputIndicatorSaw.html
+++ b/SignalOutputIndicatorSaw.html
@@ -150,7 +150,7 @@
 
                     <p>Obsah těchto stránek je určen pro poskytování aplikační podpory. Jde o prezentaci podrobnějších informací k některým produktům o demonstraci příkladů úspěšných řešení.
 					<br />  
-					Stránky poskytují doplňující infomace k hlavním stránkám společnosti 
+					Stránky poskytují doplňující informace k hlavním stránkám společnosti 
 					<a href="http://www.mitutoyo.cz" title="Email">www.mitutoyo.cz</a>.</p>                    
                 </div>
                 
