--- a/index.html
+++ b/index.html
@@ -103,6 +103,9 @@
 						<br /><i>Data output from LH-600 using cable.</i></li>
 						<li><a href="MicroscopeUnits.html">Úvod do video mikroskopových jednotek</a>
 						<br /><i>Introduction to Video Microscope Units</i></li>
+						<li><a href="EgEhCounterApp">Aplikace s lineárními snímači a EG (EH) countery</a>
+						<br /><i>Aplication with linear gauges and EG (EH) counters</i></li>
+					</ul>
 					</ul>
 					
 					<h3>Automatizace (automation)</h3>
