--- a/index.html
+++ b/index.html
@@ -105,6 +105,8 @@
 						<br /><i>Introduction to Video Microscope Units</i></li>
 						<li><a href="EgEhCounterApp">Aplikace s lineárními snímači a EG (EH) countery</a>
 						<br /><i>Aplication with linear gauges and EG (EH) counters</i></li>
+						<li><a href="EjCounterApp">Nová řada lineárních snímačů a EJ counterů</a>
+						<br /><i>New serie of linear gauges and EJ counters.</i></li>
 					</ul>
 					</ul>
 					
