Signal indicator addition

--- a/EjCounterApp.html
+++ b/EjCounterApp.html
@@ -139,8 +139,8 @@
 					<h2>Čítače</h2>
 					
 					<h4>Modul čítače EJ-102N (542-080)</h4>
-					<p>Základní funkční jednotkou je modul čítače <b>EJ-102N</b>. Má vstupy pro dva snímače (shora) systémový konektor pro přívod napájení a IO výstupy <i>(standardní příslušenství - Phoenix contact DFMC 1,2/5-ST-3,5-LR, příp. DFMC 1,2/5-STF-3,5)</i>. Napájení modulu je <b>10 - 27 V</b>, logické výstupy jsou typu "otevřený kolektor" (zatižitelnost 30 mA max.). Uvedený modul lze konfigurovat pomocí čtyř tlačítek, které jsou umístěny pod odklápěcím průhledným čelním panelem.<br />
-					Modul je schopen pracovat s jedním snímačem a nebo se dvěma snímači, v tomto případě v režimech:
+					<p>Základní funkční jednotkou je modul čítače <b>EJ-102N</b>. Má vstupy pro dva snímače (shora) systémový konektor pro přívod napájení a IO výstupy <i>(standardní příslušenství - Phoenix contact DFMC 1,2/5-ST-3,5-LR(Mitutoyo 21HZA158), příp. DFMC 1,2/5-STF-3,5)</i>. Napájení modulu je <b>10 - 27 V</b>, logické výstupy jsou typu "otevřený kolektor" (zatižitelnost 30 mA max.). Uvedený modul lze konfigurovat pomocí čtyř tlačítek, které jsou umístěny pod odklápěcím průhledným čelním panelem.<br />
+					Modul je schopen pracovat s jedním snímačem nebo se dvěma snímači, v tomto případě v režimech:
 					</p>
 					
 					<ul>
