--- a/index.html
+++ b/index.html
@@ -103,10 +103,12 @@
 						<br /><i>Data output from LH-600 using cable.</i></li>
 						<li><a href="MicroscopeUnits.html">Úvod do video mikroskopových jednotek</a>
 						<br /><i>Introduction to Video Microscope Units</i></li>
-						<li><a href="EgEhCounterApp">Aplikace s lineárními snímači a EG (EH) countery</a>
+						<li><a href="EgEhCounterApp.html">Aplikace s lineárními snímači a EG (EH) countery</a>
 						<br /><i>Aplication with linear gauges and EG (EH) counters</i></li>
-						<li><a href="EjCounterApp">Nová řada lineárních snímačů a EJ counterů</a>
+						<li><a href="EjCounterApp.html">Nová řada lineárních snímačů a EJ counterů</a>
 						<br /><i>New serie of linear gauges and EJ counters.</i></li>
+						<li><a href="EjCounterInterface1.html">Připojení a komunikace EJ-counterů s prostředím, díl 1 (s použitím IO)</a>
+						<br /><i>Connection and communicateion of EJ counters with environment, part 1 (using IO)</i></li>
 					</ul>
 					</ul>
 					
