--- a/EjCounterApp.html
+++ b/EjCounterApp.html
@@ -215,7 +215,7 @@
 					
 					<div class="alert alert-info">     
 						<b>
-						<p>Připojení EJ-counterů do prostředí a popisu komunikace je věnován <b><a href="EjCounterInterface.html">samostatný článek</a></b>. 
+						<p>Připojení EJ-counterů do prostředí a popisu komunikace je věnován <b><a href="EjCounterInterface1.html">samostatný článek</a></b>. 
 						</p>
 						</b>
 					</div>
