--- a/EjCounterApp.html
+++ b/EjCounterApp.html
@@ -149,7 +149,7 @@
 						<li>součtové nebo rozdílové uspořádání snímačů. Ve výsledku se tak dvojice snímačů chová jako jediný snímač s jedinou výstupní hodnotou.</li>
 					</ul> 
 					
-					<p>Snímače v libovolném z uvedených zapojení mohou pracovat ve standardním režimu (aktuální hodnoty) nebo v režimu zachycení mezních hodnot (MIN, MAX, TIR). U každého snímače lze použít třístupňové toleranční vyhodnocení s výstupem na IO konektor. IO výstup tolerančího vyhodnocení je jen jeden (3 stavy, 3 vývody), takže výstupní stavy odpovídají tomu snímači, jehož hodnota se právě zobrazuje ne displeji (lze přepnout).<br />
+					<p>Snímače v libovolném z uvedených zapojení mohou pracovat ve standardním režimu (aktuální hodnoty) nebo v režimu zachycení mezních hodnot (MIN, MAX, TIR). U každého snímače lze použít tří- nebo pětistupňové toleranční vyhodnocení s výstupem na IO konektor. Na IO konektor jsou vyvedeny pouze 3 logické vývody pro toleranční vyhodnocení (tj. pro jednu měřenou hodnotu), takže výstupní stavy odpovídají tomu snímači, jehož hodnota je aktuálně zobrazována ne displeji (lze přepnout tlačítkem či příkazem).<br />
 					Protože modul čítače umí zobrazovat jen jednu hodnotu, lze při dvou zapojených snímačů v samostatném režimu přepínat na displej hodnotu z kanálu 1 nebo 2 pomocí tlačítka pod předním krytem.
 					</p>
 					
