Added draft of page EjCounterInterface2 (communication using data)

--- a/EgEhCounterApp.html
+++ b/EgEhCounterApp.html
@@ -163,7 +163,7 @@
 						</b>
 					</div>
 					
-					<p>Hlavní <b>výhodou původních čítačů</b> je pak snadnost použití v případech, kdy potřebujeme panelovou montáž – tedy velký a výrazný displej a jednoduchost ručního nastavování parametrů jednotky.
+					<p>Hlavní <b>výhodou původních čítačů</b> je pak snadnost použití v případech, kdy potřebujeme panelovou montáž – tedy velký a výrazný displej a jednoduchost ručního nastavování parametrů jednotky. Dolší výhodou je větší rozsah využitelných IO vývodů pro interakci s prostředím.
 					</p>
 				
                 </div>
