Changes for EJ Counter Interface 2 article

--- a/EjCounterInterface1.html
+++ b/EjCounterInterface1.html
@@ -107,9 +107,9 @@
 					<p>Modelové měřící zařízení používá jeden snímač (<b>LG-100-0525</b> 542-194: 25 mm, rozlišení 0,5 µm ) a jeden čítač <a href="docs/EJ_counter_99MBC139A.pdf"><b>EJ-102N</b></a>. Snímač je osazen kulovým dotekem, aby bylo možno lépe "podsouvat" měřený díl bez nutnosti samostatného zvedání vřetene snímače. Úkolem zařízení je změřit výšku výrobku a provést vyhodnocení, zda rozměr je v požadované toleranci či nikoliv.<br />V rámci přípravy tohoto měřícího pracoviště byly ovládacími tlačítky na čelní straně modulu (pod průhledným víčkem) nastaveny tyto hodnoty (viz <a href="docs/EJ_counter_99MBC139A.pdf">návod, kap. 3.2.5</a>):
 					</p>
 					<p style=" padding:0px 25px 0px 25px;">
-					Horní mez: &nbsp;110,000<br />
-					Dolní mez:  &nbsp;109,940<br />
-					Hodnota Preset: &nbsp;96,000<br />					
+					Horní mez: &nbsp;111,000<br />
+					Dolní mez:  &nbsp;110,940<br />
+					Hodnota Preset: &nbsp;109,000<br />					
 					Display at startup[09] = 1 <i>(změna proti defaultní hodnotě 0)</i>
 					</p>
 				
@@ -175,7 +175,7 @@
 					<h2>Odkazy a další informace</h2>
 					<p><a href="EEgEhCounterApp.html">Aplikace s lineárními snímači a EG (EH) countery</a></p>
 					<p><a href="EjCounterApp.html">Nová řada lineárních snímačů a EJ counterů</a></p>
-					<p>Použití EJ-counterů s připojením přes datové USB rozhraní - <b>PŘIPRAVUJE SE</b></p>
+					<p><a href="EjCounterInterface2.html">Připojení a komunikace EJ-counterů s prostředím, díl 2: Použití EJ-counterů s připojením přes datové USB rozhraní</a></p>
 				
                 </div>
             <!--End Main Content Area-->
