--- a/index.html
+++ b/index.html
@@ -114,6 +114,8 @@
 						<br /><i>New serie of linear gauges and EJ counters.</i></li>
 						<li><a href="EjCounterInterface1.html">Připojení a komunikace EJ-counterů s prostředím, díl 1 (s použitím IO)</a>
 						<br /><i>Connection and communicateion of EJ counters with environment, part 1 (using IO)</i></li>
+						<li><a href="EjCounterInterface2.html">Připojení a komunikace EJ-counterů s prostředím, díl 2 (s použitím datové komunikace)</a>
+						<br /><i>Connection and communicateion of EJ counters with environment, part 2 (using data cummunication)</i></li>
 					</ul>
 					<br />
 					
