Added link to USB commands

--- a/EjCounterInterface2.html
+++ b/EjCounterInterface2.html
@@ -152,7 +152,7 @@
 					
 					<h3>Komunikační příkazy</h3>					
 
-					<p>Všechny příkazy pro komunikaci s countery jsou popsány v manuálu v kapitole USB communication format ve formátu data a odpověď. Důležité je připomenout, že návratový řetězec (odpověď), obsahuje i tzv. error kódy, tedy informace o tom že se vše povedlo či o tom, proč se to nepovedlo. Celkem běžně se může stát, že pošleme špatný požadavek. V takovém případě se vrátí odpověď s chybovým kódem <b>4 = Undefined command</b>.
+					<p>Všechny <a href="./docs/EJ_counter_USB_commands.pdf">příkazy pro komunikaci</a> s countery jsou popsány v manuálu v kapitole USB communication format ve formátu data a odpověď. Důležité je připomenout, že návratový řetězec (odpověď), obsahuje i tzv. error kódy, tedy informace o tom že se vše povedlo či o tom, proč se to nepovedlo. Celkem běžně se může stát, že pošleme špatný požadavek. V takovém případě se vrátí odpověď s chybovým kódem <b>4 = Undefined command</b>.
 					</p>
 					<p><b>PŘÍKLAD:</b>
 					</p>
