--- a/EjCounterApp.html
+++ b/EjCounterApp.html
@@ -222,7 +222,7 @@
 					</p>
 					
 					<h3>EtherCAT (21HZA264)</h3>
-					<p>Využívá další protokol založený na technologii Ethernet. Jeho rozšíření je zhruba poloviční ve srovnání s protokoly PROFINET nebo EtherNet/IP. Srovnání oblíbenosti jednotlivých pr;mzslov7ch protokolů například <a href="https://insights.globalspec.com/article/11936/what-is-the-most-popular-industrial-network-protocol">zde</q>.
+					<p>Využívá další protokol založený na technologii Ethernet. Jeho rozšíření je zhruba poloviční ve srovnání s protokoly PROFINET nebo EtherNet/IP. Srovnání oblíbenosti jednotlivých průmyslových protokolů například <a href="https://insights.globalspec.com/article/11936/what-is-the-most-popular-industrial-network-protocol">zde</a>.
 					</p>
 					
 					<br />
